--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "headers": "^0.9.6",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
